<resources>
    <string name="app_name">VectorCar</string>
    <string name="game_over">Game Over</string>
    <string name="puncture">PUNCTURE</string>
    <string name="menu_item1">Start Game</string>
    <string name="menu_item2">Leaderboard</string>
    <string name="menu_item3">Options</string>
    <string name="menu_item4">Help</string>
    <string name="menu_item5">Credits</string>
    <string name="menu_item6">Exit</string>
    <string name="back_button">Back</string>
    <string name="max_speed">"Maximum speed: "</string>
    <string name="lane_number">"Number of lanes: "</string>
    <string name="car">Car</string>
    <string name="map">Map</string>
    <string name="reset">Reset</string>
    <string name="your_score">"Your Score: "</string>

    <string name="credits_text">This game was developed for the contest of University of Pannon by Don\'t never give app team.</string>
    <string name="created_text">Created by the Don\'t never give app team.</string>
    <string name="help_text">">>  Swipe right or left to switch between lanes\n\n>>  Up to accelerate\n\n>>  Down to brake"</string>
    <string name="no_scores">No scores have been made so far...</string>
    <string name="choose_name_title">Type your name!</string>
    <string name="shared_preferences_key">hu.pendroid.dnga.vectorcar.key</string>
    <string name="maximum_speed_key">maximum_speed</string>
    <string name="lane_number_key">lane_number</string>
    <string name="score_list_key">score_list_key</string>
</resources>
