<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMenuBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hu.pendroid.dnga.vectorcar.OptionsActivity">


    <TextView
        android:text="@string/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carText"
        android:textSize="20sp"/>


    <TextView
        android:text="@string/max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxSpeedTextView"
        android:layout_marginTop="20dp"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/maxSpeedSeekBar" />




    <TextView
        android:text="@string/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/mapText"
        android:textSize="20sp"/>



    <TextView
        android:text="@string/lane_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/laneNumberTextView"
        android:layout_marginTop="20dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/laneNumberSeekBar" />



</LinearLayout>
